methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:6: error: value - is not a member of Unit
      forward-
             ^