methods.slug.SlugHunting.scala.code
def hunt() {
  while (isFacingTrail()){
    while (estSurBiscuit()){
      forward()
      forward-
      baisseBrosse()
      leveBrosse()
    }
  }
  prendBiscuit()  
}

def isFacingTrail():Boolean = {
  while (!estSurBiscuit){
    if (!estFaceMur){
      forward()
      if (getGroundColor()==Color.green){
        backward ; return true
      }
      else 
        backward()
        left()
    }
    else 
      left()
    }
  return true
  }